fixed collapsing chart link on OA overview; replaced span labels with time labels on OA development

--- a/app/assets/stylesheets/modules/charts/_oa_horizontal_charts.scss
+++ b/app/assets/stylesheets/modules/charts/_oa_horizontal_charts.scss
@@ -1,4 +1,5 @@
-div.chart-container { padding-left: 0; } // Override BS default column padding
+div.chart-container,
+div.chart-link-container { padding-left: 0; } // Override BS default column padding
 
 ul.stacked-bar,
 ul.stacked-bar > li {
@@ -105,7 +106,6 @@ span.relative-rounded {
 }
 
 li.unused span.relative-rounded  { color: #000; }
-
 
 ul.oa-colors-list {
   margin: 0 0 1.5em 0;
